...
        VStack(spacing: 20) {
            TextField("SwiftUI 텍스트필드", text: $text, axis: .vertical)
                .font(.title)
                .padding()
                .border(Color.black)
                .lineLimit(1...4)
                .accessibilityIdentifier("emailTextField")
                .accessibilityLabel("이메일 가입란")
            LegacyTextField(text: $legacyText)
                .frame(height: 50)
                .accessibilityIdentifier("passwordTextField")
            Button("버튼 클릭") {
                isPresented = true
            }
            .accessibilityIdentifier("loginButton")
            Text(legacyText)
        }
        .padding()
        .sheet(isPresented: $isPresented, content: {
            LegacyViewController()
        })
...
