//
//  SwiftUIWidgetUITests.swift
//  SwiftUIWidgetUITests
//
//  Created by 이중엽 on 4/29/24.
//

import XCTest

final class SwiftUIWidgetUITests: XCTestCase {

    override func setUpWithError() throws {
        // Put setup code here. This method is called before the invocation of each test method in the class.

        // In UI tests it is usually best to stop immediately when a failure occurs.
        continueAfterFailure = false

        // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
    }

    override func tearDownWithError() throws {
        // Put teardown code here. This method is called after the invocation of each test method in the class.
    }

    func testExample() throws {
                        
        let app = XCUIApplication()
        app.launch()
        
        app.textViews["emailTextField"].tap()
        app.textViews["emailTextField"].typeText("adsf@naver.com")
        
        app.buttons["loginButton"].tap()
        
        XCTAssertTrue(app.staticTexts["클릭"].exists, "다음 페이지로 넘어가지 않았으니 확인 필요")
                        
    }
    
    func testExample2() throws {
                        
        let app = XCUIApplication()
        app.launch()
        
        app.textViews["emailTextField"].tap()
        app.textViews["emailTextField"].typeText("adsf@naver.com")
        
        app.buttons["loginButton"].tap()
        
        XCTAssertFalse(app.staticTexts["클릭"].exists, "다음 페이지로 넘어가지 않았으니 확인 필요")
                        
    }

    func testLaunchPerformance() throws {
        if #available(macOS 10.15, iOS 13.0, tvOS 13.0, watchOS 7.0, *) {
            // This measures how long it takes to launch your application.
            measure(metrics: [XCTApplicationLaunchMetric()]) {
                XCUIApplication().launch()
            }
        }
    }
}
